--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,3 +141,48 @@ jobs:
             telemetry_smoke_results.xml
             test_results.xml
 
+  run-all-tests:
+    name: Run combined test script
+    runs-on: ubuntu-latest
+    needs: [backend-tests, frontend-tests]
+    defaults:
+      run:
+        working-directory: ./
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
+      - name: Install frontend dependencies (for run_tests_all.sh)
+        run: |
+          if [ -f frontend/package.json ]; then
+            cd frontend && npm ci
+          fi
+
+      - name: Install gateway dependencies (for run_tests_all.sh)
+        run: |
+          if [ -f gateway/package.json ]; then
+            cd gateway && npm ci
+          fi
+
+      - name: Install backend dependencies (for run_tests_all.sh)
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f backend/requirements.txt ]; then
+            pip install -r backend/requirements.txt
+          fi
+
+      - name: Make test script executable and run
+        run: |
+          chmod +x ./run_tests_all.sh
+          ./run_tests_all.sh
+
