--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,8 @@ jobs:
     defaults:
       run:
         working-directory: ./frontend
+    env:
+      REACT_APP_FRONTEND_MASKING: 'true'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -103,6 +105,9 @@ jobs:
           name: frontend-test-results
           path: |
             frontend
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
       - name: Print OpenTelemetry package versions and enforce minimums
         run: |
@@ -153,6 +158,8 @@ jobs:
     defaults:
       run:
         working-directory: ./gateway
+    env:
+      GATEWAY_MASKING_ENABLED: 'true'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -185,6 +192,9 @@ jobs:
     defaults:
       run:
         working-directory: ./
+    env:
+      GATEWAY_MASKING_ENABLED: 'true'
+      REACT_APP_FRONTEND_MASKING: 'true'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
