--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,8 @@ opentelemetry-instrumentation-httpx==0.57b0
 opentelemetry-semantic-conventions==0.57b0
 opentelemetry-instrumentation-requests==0.57b0
 opentelemetry-util-http==0.57b0
+opentelemetry-propagator-b3==1.36.0
+opentelemetry-propagator-jaeger==1.36.0
 APScheduler==3.10.4
 
 pydantic_settings==2.10.1
