--- a/docker-compose.external-es.yml
+++ b/docker-compose.external-es.yml
@@ -16,6 +16,8 @@ services:
       - OTEL_SERVICE_NAME=elasticsearch-ai-backend
       - OTEL_SEMCONV_STABILITY_OPT_IN=http
       - DEPLOYMENT_ENV=${DEPLOYMENT_ENV:-development}
+      - OTEL_PYTHON_INSTRUMENTATION_ELASTICSEARCH_ENABLED=true
+      - OTEL_PYTHON_INSTRUMENTATION_ELASTICSEARCH_CAPTURE_SEARCH_QUERY=raw
     ports:
       - "8000:8000"
     depends_on:
