--- a/otel-es-config.yaml
+++ b/otel-es-config.yaml
@@ -1,5 +1,49 @@
 receivers:
-  otlp:
+  # Receiver for platform specific log files
+  filelog/platformlogs:
+    include: [ /var/log/*.log ]
+    retry_on_failure:
+      enabled: true
+    start_at: end
+    storage: file_storage
+#    start_at: beginning
+
+  # Receiver for CPU, Disk, Memory, and Filesystem metrics
+  hostmetrics/system:
+    collection_interval: 30s
+    scrapers:
+      disk:
+      filesystem:
+      cpu:
+        metrics:
+          system.cpu.utilization:
+            enabled: true
+          system.cpu.logical.count:
+            enabled: true
+      memory:
+        metrics:
+          system.memory.utilization:
+            enabled: true
+      # process scraper is disabled for now: https://github.com/open-telemetry/opentelemetry-collector-contrib/issues/39423
+      #process:
+      #  mute_process_exe_error: true
+      #  mute_process_io_error: true
+      #  mute_process_user_error: true
+      #  metrics:
+      #    process.threads:
+      #      enabled: true
+      #    process.open_file_descriptors:
+      #      enabled: true
+      #    process.memory.utilization:
+      #      enabled: true
+      #    process.disk.operations:
+      #      enabled: true
+      network:
+      processes:
+      load:
+
+  # Receiver for logs, traces, and metrics from SDKs
+  otlp/fromsdk:
     protocols:
       grpc:
         endpoint: 0.0.0.0:4317
@@ -14,7 +58,66 @@ connectors:
       - context: metric
         statement: route() where IsMatch(instrumentation_scope.name, "github.com/open-telemetry/opentelemetry-collector-contrib/receiver/hostmetricsreceiver/internal/scraper/*")
         pipelines: [metrics/infra/ecs, metrics/otel]
-  elasticapm: {}
+  elasticapm: 
+processors:
+  # DEPRECATED: The elasticinframetrics processor is deprecated and will be removed in 9.2.0.
+  elasticinframetrics:
+  resourcedetection:
+    detectors: ["system"]
+    system:
+      hostname_sources: ["os"]
+      resource_attributes:
+        host.name:
+          enabled: true
+        host.id:
+          enabled: false
+        host.arch:
+          enabled: true
+        host.ip:
+          enabled: true
+        host.mac:
+          enabled: true
+        host.cpu.vendor.id:
+          enabled: true
+        host.cpu.family:
+          enabled: true
+        host.cpu.model.id:
+          enabled: true
+        host.cpu.model.name:
+          enabled: true
+        host.cpu.stepping:
+          enabled: true
+        host.cpu.cache.l2.size:
+          enabled: true
+        os.description:
+          enabled: true
+        os.type:
+          enabled: true
+  attributes/dataset:
+    actions:
+      - key: event.dataset
+        from_attribute: data_stream.dataset
+        action: upsert
+  resource/process:
+    attributes:
+      - key: process.executable.name
+        action: delete
+      - key: process.executable.path
+        action: delete
+  elastictrace:
+
+exporters:
+  elasticsearch/ecs:
+    endpoints: ["${env:ELASTIC_ENDPOINT}"]
+    api_key: ${env:ELASTIC_API_KEY}
+    mapping:
+      mode: ecs
+
+  elasticsearch/otel:
+    endpoints: [ "${env:ELASTIC_ENDPOINT}" ]
+    api_key: ${env:ELASTIC_API_KEY}
+    mapping:
+      mode: otel
 
 processors:
   elasticinframetrics:
@@ -74,16 +177,29 @@ extensions:
           authenticator: bearertokenauth
 
 service:
+  extensions: [apmconfig]
   pipelines:
-    traces:
-      receivers: [otlp]
-      processors: [batch, elastictrace, resource/process, attributes/dataset]
+    traces/fromsdk:
+      receivers: [otlp/fromsdk]
+      processors: [elastictrace, batch]
+      exporters: [elasticapm, elasticsearch/ecs]
+
+    metrics/fromsdk:
+      receivers: [otlp/fromsdk]
+      processors: [batch/metrics]
       exporters: [elasticsearch/ecs]
-    metrics:
-      receivers: [otlp]
-      processors: [batch/metrics, elasticinframetrics, resource/process, attributes/dataset]
+
+    metrics/hostmetrics:
+      receivers: [hostmetrics/system]
+      processors: [elasticinframetrics, resourcedetection, attributes/dataset, resource/process, batch/metrics]
       exporters: [elasticsearch/ecs]
-    logs:
-      receivers: [otlp]
-      processors: [batch]
+
+    metrics/aggregated-metrics:
+      receivers: [elasticapm]
+      processors: []
       exporters: [elasticsearch/ecs]
+
+    logs/fromsdk:
+      receivers: [otlp/fromsdk]
+      processors: []
+      exporters: [elasticapm, elasticsearch/ecs]
