--- a/otel-es-config.yaml
+++ b/otel-es-config.yaml
@@ -60,8 +60,14 @@ connectors:
         pipelines: [metrics/infra/ecs, metrics/otel]
   elasticapm: 
 processors:
-  # DEPRECATED: The elasticinframetrics processor is deprecated and will be removed in 9.2.0.
-  elasticinframetrics:
+  batch:
+    send_batch_size: 1000
+    timeout: 1s
+    send_batch_max_size: 1500
+  batch/metrics:
+    send_batch_size: 1000
+    timeout: 1s
+    send_batch_max_size: 3000
   resourcedetection:
     detectors: ["system"]
     system:
@@ -152,7 +158,7 @@ service:
 
     metrics/hostmetrics:
       receivers: [hostmetrics/system]
-      processors: [elasticinframetrics, resourcedetection, attributes/dataset, resource/process, batch/metrics]
+      processors: [resourcedetection, attributes/dataset, resource/process, batch/metrics]
       exporters: [elasticsearch/ecs]
 
     metrics/aggregated-metrics:
