--- a/otel-es-config.yaml
+++ b/otel-es-config.yaml
@@ -109,7 +109,7 @@ processors:
   elastictrace:
 
 exporters:
-  elasticsearch/otel:
+  elasticsearch/ecs:
     endpoints: ["${env:ELASTIC_ENDPOINT}"]
     api_key: ${env:ELASTIC_API_KEY}
     mapping:
